--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My first page</title>
+  <title>Adyl Develop Group</title>
   <meta charset="utf-8">
 
 <body>
