--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h4>Я пишу сразу в нескольких строках</h4>
   <h5>Я пишу сразу в нескольких строках</h5>
   <h6>Я пишу сразу в нескольких строках</h6>
+  <h6>Я добавил новый заголовок</h6>
   <h1>My first header</h1>
   <nav>
 
